<resources>
    <string name="app_name" translatable="false">namaz wagtlar</string>

    <string name="main_fragment_label">Namaz times</string>
    <string name="about_fragment_label">About</string>
    <string name="settings_fragment_label">Settings</string>

    <!-- Preference Titles -->
    <string name="appearance">Appearance</string>
    <string name="reminders">Reminders</string>

    <!-- Appearance Preferences -->
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="summaryOff_dark_mode">Enable dark mode</string>
    <string name="summaryOn_dark_mode">Disable dark mode</string>

    <!-- Reminders Preferences -->
    <string name="enable_reminder">Enable reminders</string>
    <string name="one_min_reminder">Remind 1 minute before</string>
    <string name="enable_custom_reminder">Enable custom reminder</string>
    <string name="custom_min_reminder">Remind N minutes before</string>
    <string name="summaryOff_reminder">Enable reminder</string>
    <string name="summaryOn_reminder">Disable reminder</string>
    <string name="reminder_tip">In order to make reminders work properly,
            \nyou have to remove this app from battery optimization</string>
    <string name="app_version">App version</string>
    <string name="app_version_value" translatable="false">1.0</string>
    <string name="fasting">Fasting</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="isha">Isha</string>

    <string name="notification_text">Namaz time</string>
    <string name="tip_title">Tip</string>

    <string name="reminder_toast_message">Reminders set</string>
</resources>